--- a/views/partials/publish/2-step-category.html
+++ b/views/partials/publish/2-step-category.html
@@ -4,22 +4,6 @@
             <use xlink:href="#icon-back"></use>
         </svg>
     </a>
-
-    <a href="#" class="publishHeader-action">
-        <svg class="icon icon-clear">
-            <use xlink:href="#icon-clear"></use>
-        </svg>
-    </a>
-    <a href="#" class="publishHeader-action">
-        <svg class="icon icon-repeat">
-            <use xlink:href="#icon-repeat"></use>
-        </svg>
-    </a>
-    <a href="#" class="publishHeader-action">
-        <svg class="icon icon-check">
-            <use xlink:href="#icon-check"></use>
-        </svg>
-    </a>
 </header>
 
 <main class="publishMain">
@@ -49,52 +33,70 @@
 
         <ul class="category">
             <li class="category-type">
-                <svg class="icon icon-cat-food">
-                    <use xlink:href="#icon-cat-food"></use>
-                </svg>
-                <strong class="category-type-name">
-                    Alimentos
-                </strong>
+                <label>
+                    <input type="radio" name="categoryType" id="">
+                    <svg class="icon icon-cat-food">
+                        <use xlink:href="#icon-cat-food"></use>
+                    </svg>
+                    <strong class="category-type-name">
+                        Alimentos
+                    </strong>
+                </label>
             </li>
             <li class="category-type">
-                <svg class="icon icon-cat-drink">
-                    <use xlink:href="#icon-cat-drink"></use>
-                </svg>
-                <strong class="category-type-name">
-                    Bebidas
-                </strong>
+                <label>
+                    <input type="radio" name="categoryType" id="">
+                    <svg class="icon icon-cat-drink">
+                        <use xlink:href="#icon-cat-drink"></use>
+                    </svg>
+                    <strong class="category-type-name">
+                        Bebidas
+                    </strong>
+                </label>
             </li>
             <li class="category-type">
-                <svg class="icon icon-cat-shoe active">
-                    <use xlink:href="#icon-cat-shoe"></use>
-                </svg>
-                <strong class="category-type-name">
-                    Calçados
-                </strong>
+                <label>
+                    <input type="radio" name="categoryType" id="">
+                    <svg class="icon icon-cat-shoe">
+                        <use xlink:href="#icon-cat-shoe"></use>
+                    </svg>
+                    <strong class="category-type-name">
+                        Calçados
+                    </strong>
+                </label>
             </li>
             <li class="category-type">
-                <svg class="icon icon-cat-home">
-                    <use xlink:href="#icon-cat-home"></use>
-                </svg>
-                <strong class="category-type-name">
-                    Casa
-                </strong>
+                <label>
+                    <input type="radio" name="categoryType" id="">
+                    <svg class="icon icon-cat-home">
+                        <use xlink:href="#icon-cat-home"></use>
+                    </svg>
+                    <strong class="category-type-name">
+                        Casa
+                    </strong>
+                </label>
             </li>
             <li class="category-type">
-                <svg class="icon icon-cat-electronic">
-                    <use xlink:href="#icon-cat-electronic"></use>
-                </svg>
-                <strong class="category-type-name">
-                    Eletrônicos
-                </strong>
+                <label>
+                    <input type="radio" name="categoryType" id="">
+                    <svg class="icon icon-cat-electronic">
+                        <use xlink:href="#icon-cat-electronic"></use>
+                    </svg>
+                    <strong class="category-type-name">
+                        Eletrônicos
+                    </strong>
+                </label>
             </li>
             <li class="category-type">
-                <svg class="icon icon-cat-game">
-                    <use xlink:href="#icon-cat-game"></use>
-                </svg>
-                <strong class="category-type-name">
-                    Games
-                </strong>
+                <label>
+                    <input type="radio" name="categoryType" id="">
+                    <svg class="icon icon-cat-game">
+                        <use xlink:href="#icon-cat-game"></use>
+                    </svg>
+                    <strong class="category-type-name">
+                        Games
+                    </strong>
+                </label>
             </li>
 
         </ul>
