--- a/assets/css/scss/helpers/_reset.scss
+++ b/assets/css/scss/helpers/_reset.scss
@@ -42,6 +42,7 @@ button {
     text-align: center;
     border: none;
     background: none;
+    cursor: pointer;
 
     &:focus {
         outline: 0;
@@ -55,6 +56,7 @@ textarea {
     color: $black;
     border: none;
     background-color: transparent;
+    width: 100%;
 
     &:focus {
         outline: 0;
