--- a/assets/css/scss/pages/_publish.scss
+++ b/assets/css/scss/pages/_publish.scss
@@ -107,6 +107,7 @@
     border: 2px dashed #e7d2ea;
     border-radius: 10px;
 }
+
 .publish-imgOptions-image {
     border-radius: 10px;
 }
@@ -132,9 +133,9 @@
     justify-content: center;
     margin: 32px auto 30px;
 
-
     .btn {
         font-size: 12px;
+        line-height: 12px;
         border: 1px solid $purple;
         text-align: left;
         border-radius: 4px;
@@ -150,6 +151,96 @@
             height: 12px;
             top: 0;
         }
+
+        &.active {
+
+            top: 0;
+            justify-content: initial;
+        }
     }
 }
 // !STEP FINSH
+
+.publishAutocomplete {
+    position: fixed;
+    background-color: #FFF;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    transform: translateX(100%);
+    transition: transform .2s ease;
+
+    &.active {
+        transform: translateX(0);
+    }
+}
+
+.publishAutocomplete-field {
+    font-size: 20px;
+    font-weight: 900;
+    color: $purple;
+    padding: 8px 18px;
+    border-bottom: 1px solid #999;
+}
+
+// SUGESTOES #999
+body {
+    &.location-active {
+        .pac-container {
+            display: block !important;
+        }
+    }
+}
+
+.pac-container {
+    font-family: $font;
+    box-shadow: none;
+    border: none;
+    left: 0px !important;
+    top: 96px !important;
+    position: fixed !important;
+
+    .pac-item-query {
+        font-size: 18px;
+        font-weight: bold;
+        line-height: 16px;
+        color: $black;
+
+        + * {
+            font-size: 12px;
+            color: #808080;
+            display: block;
+            margin-top: 4px;
+        }
+    }
+
+    .pac-item {
+        border: none;
+        border-bottom: 1px solid #eee;
+        position: relative;
+        padding: 18px 18px 12px;
+        padding-left: 48px;
+        line-height: normal;
+        white-space: normal;
+
+        .pac-matched {
+            font-weight: 900;
+        }
+
+        &:first-child {
+            border-top: none;
+        }
+
+        .pac-icon-marker {
+            position: absolute;
+            left: 16px;
+            background:  url(../img/publish-autocomplete-location.svg);
+            width: 18px;
+            height: 24px;
+            top: 0;
+            bottom: 0;
+            margin: auto;
+        }
+
+    }
+}
