tela de sucesso

--- a/assets/css/scss/style.scss
+++ b/assets/css/scss/style.scss
@@ -69,6 +69,7 @@ body {
 @import "pages/_publish";
 @import "pages/_favorites";
 @import "pages/_profileUser";
+@import "pages/_stepSuccess";
 
 
 // UTILITIES
