--- a/assets/css/scss/style.scss
+++ b/assets/css/scss/style.scss
@@ -71,6 +71,8 @@ body {
 @import "pages/_profileUser";
 @import "pages/_stepSuccess";
 
+@import "lib/_rcrop.scss";
+
 
 // UTILITIES
 @import "helpers/_utilities";
