--- a/views/partials/publish/3-step-info.html
+++ b/views/partials/publish/3-step-info.html
@@ -52,7 +52,7 @@
                 <label for="nameProduct" class="inputGroup-label">
                     Nome do Produto
                 </label>
-                <input type="text" id="nameProduct" class="inputGroup-field" required>
+                <input type="text" id="nameProduct" data-ng-model="step3Ctrl.productName" class="inputGroup-field" required>
             </div>
 
             <div class="inputGroup">
@@ -62,14 +62,14 @@
                         (opcional)
                     </small>
                 </label>
-                <input type="text" id="descriptionProduct" class="inputGroup-field">
+                <input type="text" id="descriptionProduct" data-ng-model="step3Ctrl.description" class="inputGroup-field">
             </div>
 
             <div class="inputGroup">
                 <label class="inputGroup-label" for="priceProduct">
                     Preço
                 </label>
-                <input type="number" id="priceProduct" class="inputGroup-field">
+                <input type="number" id="priceProduct" data-ng-model="step3Ctrl.price" class="inputGroup-field">
             </div>
 
         </section>
@@ -88,9 +88,11 @@
             </a>
         </div>
 
-        <a href="/publicar/etapa-sucesso" class="btn btn-purple publishStep-maxWidth">
+        <button class="btn btn-purple publishStep-maxWidth" data-ng-click="step3Ctrl.submit()" type="submit">
+        <!--<a href="/publicar/etapa-sucesso" class="btn btn-purple publishStep-maxWidth">-->
             Publicar Oferta!
-        </a>
+        <!-- </a> -->
+        </button>
 
     </section>
 
