--- a/views/partials/publish/4-step-success.html
+++ b/views/partials/publish/4-step-success.html
@@ -26,10 +26,10 @@
 
         <img src="assets/img/exemplo/oferta-2.jpg" alt="Nome Produto" class="stepSuccess-product-imgProduct">
         <strong class="stepSuccess-product-val">
-            R$ 799
+            R$ {{publishSuccessCtrl.offerData.price}}
         </strong>
         <h4 class="stepSuccess-product-name">
-            Itaipava Long Neck
+            {{publishSuccessCtrl.offerData.name}}
         </h4>
 
 
@@ -37,7 +37,7 @@
             <svg class="icon icon-map">
                 <use xlink:href="#icon-map"></use>
             </svg>
-            Carrefour
+            {{publishSuccessCtrl.offerData.place.name}}
         </a>
     </section>
 
